--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,31 +1,31 @@
 /* Estilos Gerais */
-header{
+header {
     background-color: white;
     color: black;
     font-family: 'Roboto', 'sans-serif';
     font-size: 16px;
 }
 
-body{
+body {
     color: black;
     background-color: #e9e9e9 !important; 
     font-family: 'Roboto', 'sans-serif';
     font-size: 20px;
 }
 
-footer{
+footer {
     background-color: rgba(0, 0, 0, 0.8);
     color: white;
     font-family: 'Roboto', 'sans-serif';
     font-size: 16px;    
 }
 
-main{
+main {
     position: relative;
     min-height: 100vh;
 }
 
-.row{
+.row {
     margin: 0;
 }
 
@@ -92,16 +92,12 @@ main{
 /* Estilos para as setas do "Carousel" */
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-    background-color: darkgreen; 
-}
-
-.carousel-control-prev:hover .carousel-control-prev-icon,
-.carousel-control-next:hover .carousel-control-next-icon {
-    background-color: darkgreen; 
+    visibility: hidden;
 }
 
 /* Estilo para os indicadores do "Carrossel" */
 .carousel-indicators button {
+    visibility: visible;
     background-color: darkgreen !important; 
     width: 10rem !important; 
     height: 0.5rem !important; 
@@ -113,25 +109,30 @@ main{
 
 /* Estilos para os blocos do "Carousel" */
 #main-slider {
-    background-image: url('../imagens/bannerMain2.png');
-    background-size: cover;
     width: auto;
-    padding: 2rem;
+    padding: 1rem;
     margin: 1rem;
+    background-size: cover;
+    background-repeat: no-repeat; 
+    background-position: center center;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #servico {
     width: auto;
-    padding: 2rem;
+    padding: 1rem;
     margin: 1rem;
+    background-size: cover;
+    background-repeat: no-repeat; 
+    background-position: center center;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #servico .card{
     transition: transform 0.5s;
+    margin: 10rem;
 }
 
 #servico .card:hover {
@@ -141,8 +142,11 @@ main{
 /* Estilos o bloco do "Sobre" */
 #sobre {
     width: auto;
-    padding: 2rem;
+    padding: 1rem;
     margin: 1rem;
+    background-size: cover;
+    background-repeat: no-repeat; 
+    background-position: center center;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -156,12 +160,12 @@ main{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    object-fit: cover;
 }
 
 #image-aluno {
-    width: 180px;
-    height: 180px;
+    width: 10rem;
+    height: 10rem;
     border-radius: 50%;
     object-fit: cover;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
@@ -171,7 +175,7 @@ main{
     text-align: right; 
 }
 
-/* Estilos o bloco do "Sobre" */
+/* Estilos o bloco do "menu" */
 #menu {
     width: auto;
     padding: 2rem;
@@ -180,51 +184,144 @@ main{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-/* Estilos os "Edits" das rotinas  */
-#data-input{
-    width: 50%;
-}
+/* -------------------------- Responsividade de tela no minimo 720px -------------------------- */
+@media (min-width: 720px) {
+    /* Estilos para as setas do "Carousel" */
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+        visibility: visible;
+        background-color: darkgreen; 
+    }
 
-/* -------------------------- Responsividade de tela no minimo 1280px -------------------------- */
-@media (min-width: 1280px) {
+    .carousel-control-prev:hover .carousel-control-prev-icon,
+    .carousel-control-next:hover .carousel-control-next-icon {
+        background-color: darkgreen; 
+    }
+
+    /* Estilos para os "Card" do "Carousel" */
+    .carousel-item .card {
+        flex: 1;
+        height: 100%; 
+        display: flex;
+        flex-direction: column;
+    }
+    .carousel-item .card-body {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+
     /* Estilos para os blocos do "Carousel" */
     #main-slider {
-        background-image: url('../imagens/bannerMain.png');
-        background-size: cover;
-        background-repeat: no-repeat; 
-        background-position: center center;
-        height: 100vh;
-        padding: 5rem;
-        margin: 3rem;
-        background-color: white;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        background-image: url('../imagens/bannerMain2.png');
+        padding: 3rem;
+        margin: 1rem;
     }    
 
     #servico {
-        width: auto;
-        height: 100vh;
-        padding: 5rem;
-        margin: 3rem;
-        background-color: white;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        background-image: url('../imagens/bannerMain2.png');
+        padding: 3rem;
+        margin: 1rem;
     }
 
     /* Estilos o bloco do "Sobre" */
     #sobre {
-        width: auto;
+        padding: 3rem;
+        margin: 1rem;
+    }
+}
+
+/* -------------------------- Responsividade de tela no minimo 1024px -------------------------- */
+@media (min-width: 1024px) {
+    /* Estilos para as setas do "Carousel" */
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+        visibility: visible;
+        background-color: darkgreen; 
+    }
+
+    .carousel-control-prev:hover .carousel-control-prev-icon,
+    .carousel-control-next:hover .carousel-control-next-icon {
+        background-color: darkgreen; 
+    }
+
+    /* Estilos para os "Card" do "Carousel" */
+    .carousel-item .card {
+        flex: 1;
+        height: 100%; 
+        display: flex;
+        flex-direction: column;
+    }
+    .carousel-item .card-body {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* Estilos para os blocos do "Carousel" */
+    #main-slider {
+        background-image: url('../imagens/bannerMain2.png');
+        padding: 4rem;
+        margin: 2rem;
+    }    
+
+    #servico {
+        background-image: url('../imagens/bannerMain2.png');
+        padding: 4rem;
+        margin: 2rem;
+    }
+
+    /* Estilos o bloco do "Sobre" */
+    #sobre {
+        padding: 4rem;
+        margin: 2rem;
+    }
+}
+
+/* -------------------------- Responsividade de tela no minimo 1280px -------------------------- */
+@media (min-width: 1280px) {
+    /* Estilos para as setas do "Carousel" */
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+        visibility: visible;
+        background-color: darkgreen; 
+    }
+
+    .carousel-control-prev:hover .carousel-control-prev-icon,
+    .carousel-control-next:hover .carousel-control-next-icon {
+        background-color: darkgreen; 
+    }
+
+    /* Estilos para os "Card" do "Carousel" */
+    .carousel-item .card {
+        flex: 1;
+        height: 100%; 
+        display: flex;
+        flex-direction: column;
+    }
+    .carousel-item .card-body {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* Estilos para os blocos do "Carousel" */
+    #main-slider {
+        background-image: url('../imagens/bannerMain.png');
         padding: 5rem;
         margin: 3rem;
-        background-color: white;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }    
+
+    #servico {
+        background-image: url('../imagens/bannerMain2.png');
+        padding: 5rem;
+        margin: 3rem;
     }
 
-    #sobre .card{
-        border: none;
-    }
-
-    /* Estilos os "Edits" das rotinas  */
-    #data-input{
-        width: 75%;
+    /* Estilos o bloco do "Sobre" */
+    #sobre {
+        padding: 5rem;
+        margin: 3rem;
     }
 }
 
