--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,6 +40,11 @@ footer {
     padding: 2.5rem;
 }
 
+.campo-filtro {
+    min-width: 10rem !important;
+    margin-right: 1rem !important;
+}
+
 .social-icons {
     list-style: none;
     display: flex;
@@ -263,6 +268,56 @@ footer {
     object-fit: cover;   
 }
 
+/* Estilos o bloco do "Formulario" */
+.formulario {
+    width: auto;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    background-size: cover;
+    background-repeat: no-repeat; 
+    background-position: center center;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.imagem-pessoa {
+    width: 7rem;
+    height: 7rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: cover;       
+}
+
+#imagem-treinamento {
+    width: 7rem;
+    height: 7rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: cover;   
+}
+
+/* Ocultar a mensagem "Nenhum ficheiro selecionado" */
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    border: 1px solid #007bff;
+    border-radius: 4px;
+}
+
+.custom-file-upload:hover {
+    background-color: #0056b3;
+    border-color: #0056b3;
+}
+
 
 /* -------------------------- Responsividade de tela no minimo 720px -------------------------- */
 @media (min-width: 720px) {
@@ -278,22 +333,14 @@ footer {
         background-color: darkgreen; 
     }
 
-    /* Estilos o bloco do "menu" */
-    #menu {
-        padding: 3rem;
-        margin-left: 1rem;
-        margin-right: 1rem;
-        margin-top: 0.5rem;
-        margin-bottom: 0.5rem;
-    }
-
-    #menu .card {
+    /* Estilos para os "Card" do "Carousel" */
+    #carousel-fotoplus .card {
         flex: 1;
         height: 100%; 
         display: flex;
         flex-direction: column;
     }
-    #menu .card-body {
+    #carousel-fotoplus .card-body {
         flex: 1;
         display: flex;
         flex-direction: column;
@@ -318,22 +365,38 @@ footer {
         margin-bottom: 0.5rem;
     }
 
-    /* Estilos para os "Card" do "Carousel" */
-    #carousel-fotoplus .card {
+    /* Estilos o bloco do "Sobre" */
+    #sobre {
+        padding: 3rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    /* Estilos o bloco do "menu" */
+    #menu {
+        padding: 3rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    #menu .card {
         flex: 1;
         height: 100%; 
         display: flex;
         flex-direction: column;
     }
-    #carousel-fotoplus .card-body {
+    #menu .card-body {
         flex: 1;
         display: flex;
         flex-direction: column;
     }
 
-    /* Estilos o bloco do "Sobre" */
-    #sobre {
-        padding: 3rem;
+    /* Estilos o bloco do "Formulario" */
+    .formulario {
         margin-left: 1rem;
         margin-right: 1rem;
         margin-top: 0.5rem;
@@ -388,6 +451,14 @@ footer {
     /* Estilos o bloco do "menu" */
     #menu {
         padding: 4rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    /* Estilos o bloco do "Formulario" */
+    .formulario {
         margin-left: 2rem;
         margin-right: 2rem;
         margin-top: 1rem;
@@ -453,6 +524,14 @@ footer {
         background-repeat: no-repeat;
         justify-content: center;
         padding: 5rem;
+        margin-left: 3rem;
+        margin-right: 3rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    /* Estilos o bloco do "Formulario" */
+    .formulario {
         margin-left: 3rem;
         margin-right: 3rem;
         margin-top: 1rem;
