--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,7 +75,6 @@ footer {
     text-decoration: underline;
 }
 
-
 /*  -----------------------   */
 
 .alert-text {
@@ -118,6 +117,31 @@ footer {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 9999;
+}
+
+/* Estilos para as "Tabelas" */
+.table-pessoa {
+    width: 100%;
+}
+
+.table-pessoa input {
+    margin: 0.5rem;
+}
+
+.table-pessoa .list-item {
+    background-color: #f8f9fa; 
+    cursor: pointer;
+    align-items: center;
+}
+
+.table-pessoa .list-item:hover {
+    background-color: #e2e6ea; 
+    cursor: pointer;
+    align-items: center;
+}
+
+.table-pessoa .list-item.selected {
+    background-color: #d0e7ff; 
 }
 
 /* Estilos para o bloco do "Navbar" */
